NFT新增链，新增默认选中状态

--- a/src/views/Attr/index.module.less
+++ b/src/views/Attr/index.module.less
@@ -99,6 +99,10 @@
                 font-size: 20px;
                 // width: 210px;
                 width: 95%;
+                &:hover{
+                    color: #fff;
+                    background-color: #539aff;
+                }
             }
         }
         .loginWrap{
