--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,12 @@ body {
   font-family: 'archivoBold';
   src: url("./assets/fonts/ArchivoBold.ttf");
 }
+
+@font-face {
+  font-family: 'numberFont';
+  src: url("./assets/fonts/NumbersFont.otf");
+}
+
 html,body{
   height: 100vh;
 }
